spinner was making progress buttons too big. changed display property to inline-block on apos-progress-btn-spinner which fixed the issue

--- a/public/css/apos-ui/apos-ui-buttons.less
+++ b/public/css/apos-ui/apos-ui-buttons.less
@@ -116,6 +116,7 @@
 
   .apos-progress-btn-spinner
   {
+    display: inline-block;
     opacity: 0;
     .transition();
     -webkit-transition: opacity .2s ease;
